# Vietnamese-Medical-RAG-QA-System

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose-backend.yml  docker-compose-frontend.yml  pyproject.toml  services.sh  test.ipynb
.github/actions/setup-python-env/: action.yml
.github/workflows/: build.yml  ci.yml  main.yml  quality.yml  test.yml
backend/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9290fad6ca4e_first_version.py
backend/scripts/: init_nltk.py  offline_load.py
backend/src/: agent.py  brain.py  cache.py  chunking.py  config.py  database.py  main.py  models.py  rerank.py  schema.py  summarizer.py  tasks.py  template.py  utils.py  vectorize.py
backend/src/functions/: calculator.py  helper.py  web_search.py
backend/tests/: conftest.py  test_chat_endpoint.py  test_database_connection.py  test_error_handling.py  test_health.py
database/: docker-compose.yml  init.sql
frontend/: Dockerfile  config.py  docker-compose.yml  helper.py  main.py  requirements.txt
notebooks/: 001_dataset.ipynb
tests/: README.md  conftest.py  test_config.py  test_foo.py  test_main.py  test_schema.py  test_utils.py
tests/unit/: README.md
